---
(4.2.6p1-RC6) 2010/03/31 Released by Harlan Stenn <stenn@ntp.org>

* [Bug 1514] Typo in ntp_proto.c: fabs(foo < .4) should be fabs(foo) < .4.
* [Bug 1464] synchronization source wrong for refclocks ARCRON_MSF (27)
  and SHM (28).
* Correct Windows port's refclock_open() to return 0 on failure not -1.
* Correct CHU, dumbclock, and WWVB drivers to check for 0 returned from
  refclock_open() on failure.
* Correct "SIMUL=4 ./flock-build -1" to prioritize -1/--one.

---
(4.2.6p1-RC5) 2010/02/09 Released by Harlan Stenn <stenn@ntp.org>

* [Bug 1140] Clean up debug.html, decode.html, and ntpq.html.
* [Bug 1438] Remove dead code from sntp/networking.c.
* [Bug 1477] 1st non-gmake make in clone w/VPATH can't make COPYRIGHT.
* [Bug 1478] linking fails with undefined reference EVP_MD_pkey_type.
* [Bug 1479] Compilation fails because of not finding readline headers.
* [Bug 1480] snprintf() cleanup caused unterminated refclock IDs.
* [Bug 1484] ushort is not defined in QNX6.

---
(4.2.6p1-RC4) 2010/02/04 Released by Harlan Stenn <stenn@ntp.org>

* [Bug 1455] ntpd does not try /etc/ntp.audio as documented.
* [Bug 1467] Fix bogus rebuild of sntp/sntp.html
* [Bug 1470] "make distdir" in $srcdir builds keyword-gen, libntp.a.
* [Bug 1473] "make distcheck" before build can't make sntp/version.m4.
* [Bug 1474] ntp_keygen needs LCRYPTO after libntp.a.
* Convert many sprintf() calls to snprintf(), also strcpy(), strcat().
* Fix widely cut-n-pasted bug in refclock shutdown after failed start.
* Remove some dead code checking for emalloc() returning NULL.
* Remove arlib.

---
(4.2.6p1-RC3) 2010/01/24 Released by Harlan Stenn <stenn@ntp.org>

* Use TZ=UTC instead of TZ= when calling date in scripts/mkver.in .
* [Bug 1448] Some macros not correctly conditionally or absolutely defined
  on Windows.
* [Bug 1449] ntpsim.h in ntp_config.c should be used conditionally.
* [Bug 1450] Option to exclude warnings not unconditionally defined on Windows.